--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<title>Home cosmetology.ru</title>
-		<link href="S/SETV2.CSS" rel="stylesheet" type="text/css" />
+		<link href="SETV2.CSS" rel="stylesheet" type="text/css" />
 	<meta charset="UFT-8"/>
 <head>
 
